@@ -1,3 +1,3 @@
 ## TODO ##
 
- * catch window resize event and resize graph
+ * nothing right now
